# copick-plugin-demo

./: README.md  pyproject.toml  release-please.config.json
.github/workflows/: release-please.yml  test.yml
src/copick_plugin_demo/cli/: cli.py
tests/: test_cli_commands.py
